--- a/src/discrete-layer/components/layer-details/ingestion-fields.css
+++ b/src/discrete-layer/components/layer-details/ingestion-fields.css
@@ -1,5 +1,6 @@
 .ingestionFields {
-  margin: 24px 0 24px 0;
+  display: table;
+  margin: 24px auto;
 }
 
 .directorySpacer {
